@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.io.PrintStream;
 import java.math.BigInteger;
+import java.lang.Integer;
 
 /**
  * <p>Binary Decision Diagrams (BDDs) are used for efficient computation of many
@@ -1100,8 +1101,8 @@ public abstract class BDD {
         boolean[] visited = new boolean[nodeCount()+2];
         visited[0] = true; visited[1] = true;
         HashMap map = new HashMap();
-        map.put(getFactory().zero(), new Integer(0));
-        map.put(getFactory().one(), new Integer(1));
+        map.put(getFactory().zero(), Integer.valueOf(0));
+        map.put(getFactory().one(), Integer.valueOf(1));
         printdot_rec(out, 1, visited, map);
         
         for (Iterator i = map.keySet().iterator(); i.hasNext(); ) {
@@ -1114,7 +1115,7 @@ public abstract class BDD {
     protected int printdot_rec(PrintStream out, int current, boolean[] visited, HashMap map) {
         Integer ri = ((Integer) map.get(this));
         if (ri == null) {
-            map.put(this.id(), ri = new Integer(++current));
+            map.put(this.id(), ri = Integer.valueOf(++current));
         }
         int r = ri.intValue();
         if (visited[r])
@@ -1127,12 +1128,12 @@ public abstract class BDD {
         BDD l = this.low(), h = this.high();
         Integer li = ((Integer) map.get(l));
         if (li == null) {
-            map.put(l.id(), li = new Integer(++current));
+            map.put(l.id(), li = Integer.valueOf(++current));
         }
         int low = li.intValue();
         Integer hi = ((Integer) map.get(h));
         if (hi == null) {
-            map.put(h.id(), hi = new Integer(++current));
+            map.put(h.id(), hi = Integer.valueOf(++current));
         }
         int high = hi.intValue();
 
