@@ -42,9 +42,9 @@ public class TryVarOrder {
             else cl = makeClassLoader();
             Class c = cl.loadClass("net.sf.javabdd.BDDFactory");
             Method m = c.getMethod("init", new Class[] { String.class, int.class, int.class });
-            bdd = m.invoke(null, new Object[] { s, new Integer(nodeTableSize), new Integer(cacheSize) });
+            bdd = m.invoke(null, new Object[] { s, Integer.valueOf(nodeTableSize), Integer.valueOf(cacheSize) });
             m = c.getMethod("setMaxIncrease", new Class[] { int.class });
-            m.invoke(bdd, new Object[] { new Integer(maxIncrease) });
+            m.invoke(bdd, new Object[] { Integer.valueOf(maxIncrease) });
             
             BufferedReader in = null;
             try {
@@ -59,7 +59,7 @@ public class TryVarOrder {
                 }
             } catch (IOException x) {
             } finally {
-                if (in != null) try { in.close(); } catch (IOException _) { }
+                if (in != null) try { in.close(); } catch (IOException ignored) { }
             }
         } catch (Exception x) {
             System.err.println("Exception occurred while initializing BDD factory: "+x.getLocalizedMessage());
@@ -88,7 +88,7 @@ public class TryVarOrder {
         Class c = bdd.getClass();
         try {
             Method m = c.getMethod("setError", new Class[] { int.class });
-            m.invoke(bdd, new Object[] { new Integer(code) });
+            m.invoke(bdd, new Object[] { Integer.valueOf(code) });
         } catch (Exception x) {
             System.err.println("Exception occurred while setting error for BDD factory: "+x.getLocalizedMessage());
             x.printStackTrace();
@@ -124,7 +124,7 @@ public class TryVarOrder {
         Constructor c = bddop_class.getConstructor(new Class[0]);
         bddoperation = c.newInstance(null);
         Method m = bddop_class.getMethod("setOp", new Class[] { int.class });
-        m.invoke(bddoperation, new Object[] { new Integer(op.id) });
+        m.invoke(bddoperation, new Object[] { Integer.valueOf(op.id) });
         m = bddop_class.getMethod("setFilenames", new Class[] { String.class, String.class, String.class });
         m.invoke(bddoperation, new Object[] { filename1, filename2, filename3 });
     }
